--- a/javascript/package.json
+++ b/javascript/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.12.6",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "bootstrap": "^4.3.1",
     "cross-fetch": "^3.0.4",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.11.0",
