--- a/java/src/main/resources/application.conf
+++ b/java/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 application.host = 0.0.0.0
 
-db.url = "jdbc:postgresql://localhost:15432/JNA"
+db.url = "jdbc:postgresql://db:5432/JNA"
 db.url = ${?JNA_DB_URL}
 db.user = "local"
 db.user = ${?JNA_DB_USER}
