--- a/javascript/package.json
+++ b/javascript/package.json
@@ -14,12 +14,15 @@
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "serve": "^11.2.0",
     "typescript": "3.7.2",
     "typestyle": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "prod": "serve -s build",
+    "serve": "serve",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
