--- a/javascript/package.json
+++ b/javascript/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.3.1",
     "cross-fetch": "^3.0.4",
     "http-proxy-middleware": "^0.20.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.4",
     "@types/react-router-dom": "^5.1.2"
   }
 }
