--- a/javascript/package.json
+++ b/javascript/package.json
@@ -43,7 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/js-cookie": "^2.2.4",
-    "@types/react-router-dom": "^5.1.2"
+    "@types/react-router-dom": "^5.1.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.0"
   }
 }
