Fixed ports for UI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,18 @@ services:
     volumes:
       - ./db/data:/var/lib/postgresql/data
 
-#  api:
-#    depends_on: db
-#    build: java
-#    restart: always
-#    ports:
-#      - "9001:3456"
-#
-#  ui:
-#    depends_on: api
-#    build: javascript
-#    restart: always
-#    ports:
-#      - "8001:5000"
+  api:
+    depends_on:
+      - db
+    build: java
+    restart: always
+    ports:
+      - "9001:3456"
+
+  ui:
+    depends_on:
+    - api
+    build: javascript
+    restart: always
+    ports:
+      - "8001:5000"
