--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     image: postgres:12.0
     restart: always
     environment:
-      POSTGRES_PASSWORD: password
-      POSTGRES_USER: local
-      POSTGRES_DB: JNA
+      POSTGRES_PASSWORD: ${JNA_DB_PASSWORD}
+      POSTGRES_USER: ${JNA_DB_USER}
+      POSTGRES_DB: ${JNA_DB_NAME}
     ports:
       - "15432:5432"
     volumes:
@@ -16,6 +16,11 @@ services:
     depends_on:
       - db
     build: java
+    environment:
+        JNA_DB_PASSWORD: ${JNA_DB_PASSWORD}
+        JNA_DB_URL: ${JNA_DB_URL}
+        JNA_DB_USER: ${JNA_DB_NAME}
+        JNA_SALT: ${JNA_SALT}
     restart: always
     ports:
       - "9001:3456"
