--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,10 +11,12 @@
     "cross-fetch": "^3.0.4",
     "http-proxy-middleware": "^0.20.0",
     "js-cookie": "^2.2.1",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
+    "react-big-calendar": "^0.23.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "serve": "^11.2.0",
     "typescript": "3.7.2",
     "typestyle": "^2.0.4"
@@ -46,6 +48,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/js-cookie": "^2.2.4",
+    "@types/react-big-calendar": "^0.22.3",
     "@types/react-router-dom": "^5.1.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0"
